--- a/index.html
+++ b/index.html
@@ -58,5 +58,11 @@
       <p>Phone: <strong>(617)565-5543</strong></p>
     </footer>
 
+
+    <script
+      src="http://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"></script>
+      <script type="text/javascript" src="css/style.css"></script>
   </body>
 </html>
