--- a/index.html
+++ b/index.html
@@ -7,57 +7,63 @@
   </head>
   <body>
     <main>
-      <!---- Landing Area ---->
-      <div id="landing">
-        <div id="landing-text">
-          <div id="landing-text-inner">
-            <h1>Acme Photography</h1>
-            <h2>Beautiful Natural Photography</h2>
-            <a href="images" class="btn" id="view-work">View Work</a>
-          </div>
-        </div>
-        <div class="landing-image"></div>
-      </div>
-      <div id="images">
-        <div id="header">
-          <h2>Our Work</h2>
-        </div>
-
-        <img src="https://source.unsplash.com/1600x900/?nature,water" alt="">
-        <div class="caption">
-          <h3>Photo One</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-        </div>
-        <img src="https://source.unsplash.com/1600x900/?nature,trees" alt="">
-        <div class="caption">
-          <h3>Photo One</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-        </div>
-        <img src="https://source.unsplash.com/1600x900/?nature,flowers" alt="">
-        <div class="caption">
-          <h3>Photo One</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-        </div>
-        <img src="https://source.unsplash.com/1600x900/?nature,animals" alt="">
-        <div class="caption">
-          <h3>Photo One</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
-        </div>
-        <img src="https://source.unsplash.com/1600x900/?nature,clouds" alt="">
-        <div class="caption">
-          <h3>Photo One</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+    <!-- Landing Area -->
+    <div id="landing">
+      <div id="landing-text">
+        <div id="landing-text-inner">
+          <h1>Acme Photography</h1>
+          <h2>Beautiful Natural Photography</h2>
+          <a href="#images" class="btn" id="view-work">
+            View Work
+          </a>
         </div>
       </div>
-    </main>
+      <div id="landing-image"></div>
+    </div>
 
-    <footer>
-      <h3>Get In Touch</h3>
-      <p>Email or call us to set up a consult</p>
-      <p>Email: <strong>contact@acmephotos.test</strong></p>
-      <p>Phone: <strong>(617)565-5543</strong></p>
-    </footer>
+    <div id="images">
+      <div id="header">
+        <h2>Our Work</h2>
+      </div>
 
+      <img src="https://source.unsplash.com/1600x900/?nature,water" alt="">
+      <div class="caption">
+        <h3>Photo One</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+      </div>
+      <img src="https://source.unsplash.com/1600x900/?nature,trees" alt="">
+      <div class="caption">
+        <h3>Photo Two</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+      </div>
+      <img src="https://source.unsplash.com/1600x900/?nature,flowers" alt="">
+      <div class="caption">
+        <h3>Photo Three</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+      </div>
+      <img src="https://source.unsplash.com/1600x900/?nature,animals" alt="">
+      <div class="caption">
+        <h3>Photo Four</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+      </div>
+      <img src="https://source.unsplash.com/1600x900/?nature,clouds" alt="">
+      <div class="caption">
+        <h3>Photo Five</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur.</p>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <h3>Get In Touch</h3>
+    <p>Email or call us to set up a consult</p>
+    <p>Email:
+      <strong>contact@acmephotos.test</strong>
+    </p>
+    <p>Phone:
+      <strong>(617) 555-5555</strong>
+    </p>
+  </footer>
 
     <script
       src="http://code.jquery.com/jquery-3.4.1.min.js"
